# ctfexam

./: .gitignore  README.md  manage.py  pyproject.toml
.github/: dependabot.yml
.github/workflows/: main.yml  rust.yml
challenges/: admin.py  models.py  urls.py  views.py
challenges/management/commands/: cleanup_processes.py  collectresults.py
challenges/migrations/: 0001_initial.py  0001_squashed_0010_challenge_listen_ports.py  0002_challengeprocess_running.py  0003_auto_20200514_1559.py  0004_auto_20200519_1453.py  0005_auto_20200519_1517.py  0006_create_ports.py  0007_challenge_container.py  0007_challengeprocess_started.py  0008_auto_20200519_1556.py  0008_auto_20200608_1222.py  0009_auto_20200526_1010.py  0009_auto_20201203_0934.py  0010_challenge_listen_ports.py  0011_auto_20201203_1058.py  0012_auto_20201203_1517.py  0013_auto_20210518_0929.py
challenges/static/css/: spinner.css
challenges/templates/challenges/: challenge_detail.html  challenge_list.html
challenges/templates/challenges/collect/: challenge.md  writeup.md
ctfexam/: asgi.py  settings.py  urls.py  views.py  wsgi.py
ctfexam/templates/: base.html  menu.html
ctfexam/templates/ctf/: faq.html  form.html  index.html
ctfexam/templatetags/: menu.py
resources/django/: production_settings.py  students.py
resources/docker/: daemon.json
resources/exam-proxy/: Cargo.toml  Dockerfile  Makefile  README.md
resources/exam-proxy/resources/: loop.sh
resources/exam-proxy/src/: main.rs
resources/nginx/: hackme.conf
resources/systemd/: ctfexam-cleanup.service  ctfexam-cleanup.timer  ctfexam.service
resources/uwsgi/: django.ini
users/: admin.py  forms.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_auto_20200513_1501.py  0003_auto_20200514_1412.py  0004_auto_20200519_1556.py  0005_auto_20200525_1155.py  0006_alter_user_id.py
users/templates/registration/: login.html
users/test/: test_user.py
