[tool.poetry]
name = "ctfexam"
version = "0.1.0"
description = "CTF environment which records how people did and lets them upload writeups"
authors = ["Thom Wiggers <thom@thomwiggers.nl>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.2.0"
django-bootstrap4 = "^3.0.0"
docker = "^5.0.0"
bleach = "^3.3.0"
Markdown = "^3.3.4"
pygments = "^2.8.1"
sentry-sdk = "^1.0.0"

[tool.poetry.dev-dependencies]
black = "^21.1b1"
django-template-check = {git = "https://github.com/thomwiggers/django-template-check.git", rev = "update-tests"}

[tool.black]
exclude = '(/(\.eggs|\.git|\.tox)/|migrations)'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

