[tool.poetry]
name = "ctfexam"
version = "0.1.0"
description = "CTF environment which records how people did and lets them upload writeups"
authors = ["Thom Wiggers <thom@thomwiggers.nl>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
django = "^4.0.6"
django-bootstrap4 = "^22.1"
docker = "^5.0.0"
bleach = "^5.0.1"
Markdown = "^3.4.1"
pygments = "^2.13.0"
sentry-sdk = "^1.9.0"

[tool.poetry.dev-dependencies]
black = "^22.6"
django-template-check = "^0.4.0"

[tool.black]
exclude = '(/(\.eggs|\.git|\.tox)/|migrations)'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

