[tool.poetry]
name = "ctfexam"
version = "0.1.0"
description = "CTF environment which records how people did and lets them upload writeups"
authors = ["Thom Wiggers <thom@thomwiggers.nl>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
django = "^4"
django-bootstrap4 = "*"
docker = "^7"
bleach = "^6"
Markdown = "^3"
pygments = "^2"
sentry-sdk = "^2"

[tool.poetry.dev-dependencies]
black = "*"
django-template-check = "*"

[tool.black]
exclude = '(/(\.eggs|\.git|\.tox)/|migrations)'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

