[package]
name = "exam-proxy"
version = "0.1.0"
authors = ["Thom Wiggers <thom@thomwiggers.nl>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "3.1", features = ["cargo"]}
log = { version = "0.4", features = ["std"] }
env_logger = "*"
ctrlc = { version = "3.2", features = ["termination"] }
hex = "0.4"
chrono = "0.4"
