[package]
name = "exam-proxy"
description = "Proxies a vulnerable application and logs the data sent to it."
version = "0.2.0"
authors = ["Thom Wiggers <thom@thomwiggers.nl>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "4", features = ["cargo"]}
log = { version = "0.4", features = ["std"] }
env_logger = "*"
ctrlc = { version = "3.4", features = ["termination"] }
hex = "0.4"
chrono = "0.4"
